# CSCPT

./: .gitignore  AGENTS.md  CLAUDE.md  FIX_SUMMARY.md  INTEGRATION.md  PROJECT_PLAN.md  README.md  anthropic.py  codex.md  openai.py  setup.sh
ai/: .env.example  .gitignore  NOTE.md  README.md  __init__.py  codex.md  config.py  (+3 more)
backend/: README.md  codex.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  codex.md  main.py
backend/app/api/: __init__.py  ai_connector.py  cash_game.py  codex.md  game.py  game_v2.py  game_ws.py  history_api.py  setup.py
backend/app/core/: __init__.py  cards.py  codex.md  config.py  event_orchestrator.py  game_events.py  hand_evaluator.py  poker_game.py  utils.py  websocket.py
backend/app/models/: __init__.py  codex.md  domain_models.py  game_models.py
backend/app/repositories/: __init__.py  base.py  codex.md  in_memory.py  persistence.py
backend/app/services/: __init__.py  codex.md  game_service.py  hand_history_service.py
backend/data/: actionhistoryrepository.json  gamerepository.json  handhistoryrepository.json  handrepository.json  userrepository.json
backend/tests/: README.md  __init__.py  codex.md  test_cards.py  test_cash_game_integration.py  test_cash_game_mechanics.py  test_game_ws_api.py  test_hand_evaluator.py  test_hand_history.py  test_poker_game.py  test_side_pots.py  test_websocket.py
backend/tests/api/: codex.md  test_ai_connector.py  test_ai_integration.py  test_cash_game_api.py  test_game_api.py  test_game_ws_api.py  test_history_api.py  test_integration.py  test_setup_api.py  test_ws_event_sequence.py
backend/tests/models/: __init__.py  codex.md  test_domain_models.py
backend/tests/repositories/: __init__.py  codex.md  test_in_memory.py  test_persistence.py
backend/tests/services/: __init__.py  codex.md  test_cash_game_service.py  test_game_service.py
(+130 files in other folders)
