[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cscp-backend"
version = "0.1.0"
description = "Chip Swinger Championship Poker Trainer Backend"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "CSCP Team", email = "example@example.com"},
]
dependencies = [
    "fastapi>=0.95.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "mypy>=1.2.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"